--- a/RuleSet/Emby_VPN.yaml
+++ b/RuleSet/Emby_VPN.yaml
@@ -3,13 +3,13 @@ payload:
   - DOMAIN-SUFFIX,cn2gias.uk
 # ACA
   - DOMAIN-SUFFIX,aca.best
+  - DOMAIN-SUFFIX,misakaf.org
 # 纸片人
   - DOMAIN-SUFFIX,embyplus.org
 # hxd
   - DOMAIN-SUFFIX,bili.rip
 # heisi
   - DOMAIN-SUFFIX,nekobox.best
-  - DOMAIN-SUFFIX,i109.com
   - DOMAIN-SUFFIX,i109.com
 # 兜底
   - DOMAIN-KEYWORD,emby
