--- a/RuleSet/AI_Own.yaml
+++ b/RuleSet/AI_Own.yaml
@@ -1,6 +1,7 @@
 payload:
 # 内容：自用ai
   - DOMAIN-SUFFIX,leonardo.ai
+  - DOMAIN-SUFFIX,originality.ai
   - DOMAIN-SUFFIX,fliki.ai
   - DOMAIN-SUFFIX,genny.lovo.ai
   - DOMAIN-SUFFIX,audyo.ai
