--- a/RuleSet/Emby_Own.yaml
+++ b/RuleSet/Emby_Own.yaml
@@ -4,6 +4,9 @@ payload:
 # ACA
   - DOMAIN-SUFFIX,aca.best
   - DOMAIN-SUFFIX,misakaf.org
+# MJJ
+  - DOMAIN,direct.mjjemby.org,DIRECT
+  - DOMAIN-SUFFIX,mjjemby.org
 # 纸片人
   - DOMAIN-SUFFIX,embyplus.org
 # hxd
@@ -15,6 +18,8 @@ payload:
   - DOMAIN-KEYWORD,581658.best
   - DOMAIN-KEYWORD,feiyuefun.fun
   - IP-CIDR6,2a03:4000:6:2150:849c:80ff:fe8c:edb3/32
-  
+# 飞跃彩虹星空
+  - DOMAIN-KEYWORD,6666666.buzz
+
 # 兜底
   - DOMAIN-KEYWORD,emby
