--- a/RuleSet/AI_Own.yaml
+++ b/RuleSet/AI_Own.yaml
@@ -2,6 +2,7 @@ payload:
 # 内容：自用ai
   - DOMAIN-SUFFIX,leonardo.ai
   - DOMAIN-SUFFIX,lumalabs.ai
+  - DOMAIN,cdn-luma.com
   - DOMAIN-SUFFIX,geospy.ai
   - DOMAIN-SUFFIX,originality.ai
   - DOMAIN-SUFFIX,fliki.ai
