--- a/RuleSet/Emby_Own.yaml
+++ b/RuleSet/Emby_Own.yaml
@@ -1,6 +1,8 @@
 payload:
-#守候
+# 守候
   - DOMAIN-SUFFIX,cn2gias.uk
+# 私房菜
+  - DOMAIN-notnetflix.cos.cat
 # ACA
   - DOMAIN-SUFFIX,aca.best
   - DOMAIN-SUFFIX,misakaf.org
