--- a/RuleSet/Emby_Own.yaml
+++ b/RuleSet/Emby_Own.yaml
@@ -20,6 +20,8 @@ payload:
   - DOMAIN-KEYWORD,feiyuefun.fun
   - IP-CIDR,5.45.109.91/32
   - IP-CIDR6,2a03:4000:6:2150:849c:80ff:fe8c:edb3/32
+# 飞跃星空
+  - DOMAIN-KEYWORD,6666666.buzz
 
 # 兜底
   - DOMAIN-KEYWORD,emby
