--- a/RuleSet/Proxy_Own.yaml
+++ b/RuleSet/Proxy_Own.yaml
@@ -3,5 +3,6 @@ payload:
   - DOMAIN-SUFFIX,xttlove.uk
   - DOMAIN-SUFFIX,jinglongyu.com
   - DOMAIN-SUFFIX,mesl.cloud
+  - DOMAIN-SUFFIX,amytele.net
   - DOMAIN-SUFFIX,esncnet.com
   - DOMAIN-SUFFIX,cos.cat
