--- a/RuleSet/Emby_Proxy.yaml
+++ b/RuleSet/Emby_Proxy.yaml
@@ -20,6 +20,8 @@ payload:
   - DOMAIN-SUFFIX,term.wtf
 # AWA
   - DOMAIN-SUFFIX,811861.xyz
+# 天南小筑
+  - DOMAIN-SUFFIX,nanflix.net
 
 # 兜底
   - DOMAIN-KEYWORD,emby
