--- a/RuleSet/Emby_Proxy.yaml
+++ b/RuleSet/Emby_Proxy.yaml
@@ -22,6 +22,6 @@ payload:
   - DOMAIN-SUFFIX,811861.xyz
 # 天南小筑
   - DOMAIN-SUFFIX,nanflix.net
-
+  - IP-CIDR,38.58.181.218/32
 # 兜底
   - DOMAIN-KEYWORD,emby
